feat: add docker support

--- a/templates/index1.html.twig
+++ b/templates/index1.html.twig
@@ -91,7 +91,7 @@
               <!-- ===== ABOUT AREA STARTS ======= -->
               <div class="about-section-area">
                 <div class="heading1">
-                  <h5 data-aos="fade-left" data-aos-duration="800"><img src="/img/icons/sublogo1.svg" alt="" />About Us</h5>
+                  <h5 data-aos="fade-left" data-aos-duration="800"><img src="/img/icons/sublogo1.svg" alt="" />About Me</h5>
                   <div class="space24"></div>
                   <h1 data-aos="fade-left" data-aos-duration="1000">Crafting Seamless</h1>
                   <div class="space24"></div>
@@ -104,7 +104,7 @@
                       <div class="about-main-boxes">
                         <h4>Rohit Darekar</h4>
                         <div class="space24"></div>
-                        <p>Hi, I’m Rohit Darekar, a dedicated UI/UX Designer with 10 years of experience creating meaningful digital experiences. I specialize in crafting user-centered designs that enhance engagement and drive results. By combining research, creativity, and technical skills, I deliver solutions that not only look great but also function seamlessly.</p>
+                        <p>Hi, I’m Rohit Darekar, Results-driven Cloud & DevOps Engineer with a solid foundation in cloud infrastructure, automation, & scalable web solutions. Proven experience leading cloud-focused startup initiatives, managing web development projects, & implementing performance-driven strategies. Adept at leveraging modern DevOps tools & continuous learning to drive innovation, streamline deployment pipelines, & solve complex technical challenges.</p>
                       </div>
                     </div>
                     <div class="col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="900">
@@ -627,7 +627,7 @@
                                 <div class="space16"></div>
                                 <ul>
                                   <li>
-                                    <a href="#"><img src="/img/all-images/blog/blog-img5.png" alt="" />Rohit Darekar</a>
+                                    <a href="#"><img src="/img/all-images/blog/blog-img5.png" alt="" />Rohit clearar</a>
                                   </li>
                                   <li>
                                     <a href="#"><i class="fa-regular fa-calendar"></i>Oct 26, 2024</a>
