feat: docker & drone support

--- a/templates/index1.html.twig
+++ b/templates/index1.html.twig
@@ -22,7 +22,7 @@
               <a class="list-group-item list-group-item-action m-0" href="#list-item-8"><img src="/img/icons/home7.svg" alt="" /> <span>Contact Us</span></a>
             </div>
             <div class="img1 image-anime reveal">
-              <img src="/img/all-images/hero/hero-img1.png" alt="" />
+              <img src="/img/all-images/hero/1746452428480.webp" alt="" />
             </div>
             <div class="space18"></div>
             <h3>Rohit Darekar</h3>
@@ -40,10 +40,10 @@
                 <a href="#"><img src="/img/icons/s-icon3.svg" alt="" /></a>
               </li>
               <li>
-                <a href="#"><img src="/img/icons/s-icon4.svg" alt="" /></a>
+                <a href="https://linkedin.com/in/darekar-rohit"><img src="/img/icons/s-icon4.svg" alt="" /></a>
               </li>
               <li>
-                <a href="#" class="m-0"><img src="/img/icons/s-icon5.svg" alt="" /></a>
+                <a href="https://rohit.cloudtix.in" class="m-0"><img src="/img/icons/s-icon5.svg" alt="" /></a>
               </li>
             </ul>
             <div class="space44"></div>
@@ -51,7 +51,7 @@
               <a href="/img/all-images/hero/cv.pdf" download class="vl-btn1">Download Now <img src="/img/icons/download1.svg" alt="" /></a>
             </div>
             <div class="space32"></div>
-            <p>© 2024 OVRO. All Rights Reserved.</p>
+            <p>Edited with love by Rohit. All Rights Reserved.</p>
           </div>
         </div>
         <div class="col-lg-8">
@@ -111,7 +111,7 @@
                       <div class="about-boxes2">
                         <img src="/img/icons/home2.svg" alt="" />
                         <div class="content-area">
-                          <h4>UI/UX Design</h4>
+                          <h4>DevOps Pipeline</h4>
                           <div class="space16"></div>
                           <p>Designing intuitive, user-focused interfaces that prioritize functionality & seamless navigation.</p>
                         </div>
@@ -122,7 +122,7 @@
                       <div class="about-boxes2">
                         <img src="/img/icons/home3.svg" alt="" />
                         <div class="content-area">
-                          <h4>User Research & Prototyping</h4>
+                          <h4>Containerization</h4>
                           <div class="space16"></div>
                           <p>Conducting in-depth user research and creating interactive prototypes to validate ideas and refine designs.</p>
                         </div>
@@ -155,17 +155,29 @@
                       <h3>Work Experience</h3>
                       <div class="space32"></div>
                       <div class="about-others-box" data-aos="zoom-in" data-aos-duration="900">
-                        <a href="#">2015-2020</a>
+                        <a href="#">March 2025 - Present</a>
                         <div class="space16"></div>
-                        <h4><a href="#">UI/UX Designer</a></h4>
+                        <h4><a href="#">Freelancer</a></h4>
                         <div class="space16"></div>
-                        <p>Creative Spark Agency</p>
+                        <p>C-suite Review LLP</p>
                         <div class="space32"></div>
-                        <a href="#">2020 - Present</a>
+                        <a href="#">Dec 2024 - Mar 2025</a>
                         <div class="space16"></div>
-                        <h4><a href="#">Senior UI/UX Designer</a></h4>
+                        <h4><a href="#">DevOps Intern</a></h4>
                         <div class="space16"></div>
-                        <p>Visionary Tech</p>
+                        <p>BOP Consultancy and Services</p>
+                        <div class="space32"></div>
+                        <a href="#">Jan 2020 Present</a>
+                        <div class="space16"></div>
+                        <h4><a href="#">Startup Founder</a></h4>
+                        <div class="space16"></div>
+                        <p>Cloudtix Technologies</p>
+                        <div class="space32"></div>
+                        <a href="#">Aug 2022 Jun 2023</a>
+                        <div class="space16"></div>
+                        <h4><a href="#">Wordpress Developer</a></h4>
+                        <div class="space16"></div>
+                        <p>Prime View Media, LLP</p>
                       </div>
                       <div class="about-others-box text-center" data-aos="zoom-in" data-aos-duration="1000">
                         <h4>Stay With Me</h4>
@@ -181,10 +193,10 @@
                             <a href="#"><img src="/img/icons/s-icon3.svg" alt="" /></a>
                           </li>
                           <li>
-                            <a href="#"><img src="/img/icons/s-icon4.svg" alt="" /></a>
+                            <a href="https://www.linkedin.com/in/darekar-rohit"><img src="/img/icons/s-icon4.svg" alt="linkedin" /></a>
                           </li>
                           <li>
-                            <a href="#" class="m-0"><img src="/img/icons/s-icon5.svg" alt="" /></a>
+                            <a href="https://rohit.cloudtix.in" class="m-0"><img src="/img/icons/s-icon5.svg" alt="" /></a>
                           </li>
                         </ul>
                       </div>
@@ -194,17 +206,18 @@
                       <h3>Education</h3>
                       <div class="space32"></div>
                       <div class="about-others-box" data-aos="zoom-in" data-aos-duration="1100">
-                        <a href="#">2010 - 2013</a>
+                        <a href="#">2023 - Present</a>
                         <div class="space16"></div>
-                        <h4><a href="#">Bachelor's Degree in Graphic Design</a></h4>
+                        <h4><a href="#">Master's Degree in Computer Science</a></h4>
                         <div class="space16"></div>
-                        <p>University of California</p>
+                        <p>ASM CSIT College of Commerce, Science &
+ Information Technology</p>
                         <div class="space32"></div>
-                        <a href="#">2013 - 2015</a>
+                        <a href="#">2020 - 2023</a>
                         <div class="space16"></div>
-                        <h4><a href="#">Master's Degree in User Experience Design</a></h4>
+                        <h4><a href="#">Bachelor's Degree in Computer Science</a></h4>
                         <div class="space16"></div>
-                        <p>Massachusetts Institute of Technology (MIT)</p>
+                        <p>Ahmednagar College</p>
                       </div>
                     </div>
                     <div class="space20"></div>
@@ -225,11 +238,11 @@
                         <div class="space24"></div>
                         <h2 data-aos="fade-left" data-aos-duration="1000">Elevating Brands</h2>
                         <div class="space24"></div>
-                        <h2 class="head" data-aos="fade-left" data-aos-duration="1100">Intuitive <span>Design</span></h2>
+                        <h2 class="head" data-aos="fade-left" data-aos-duration="1100">Intuitive <span>Solutions</span></h2>
                         <div class="space50"></div>
                         <div class="div" data-aos="fade-left" data-aos-duration="900">
                           <div class="service-main-boxes">
-                            <h4>UI/UX Design</h4>
+                            <h4>DevOps Pipeline</h4>
                             <div class="space24"></div>
                             <p>Designing intuitive, user-focused interfaces that prioritize functionality and seamless navigation.</p>
                           </div>
@@ -237,7 +250,7 @@
                         <div class="space30"></div>
                         <div class="div" data-aos="fade-left" data-aos-duration="1000">
                           <div class="service-main-boxes">
-                            <h4>User Research & Prototyping</h4>
+                            <h4>Project Managment</h4>
                             <div class="space24"></div>
                             <p>Conducting in-depth user research and creating interactive prototypes to validate ideas and refine designs.</p>
                           </div>
@@ -245,7 +258,7 @@
                         <div class="space30"></div>
                         <div class="div" data-aos="fade-left" data-aos-duration="1100">
                           <div class="service-main-boxes">
-                            <h4>Responsive Web Design</h4>
+                            <h4>Server Hosting</h4>
                             <div class="space24"></div>
                             <p>Crafting designs that adapt seamlessly across all devices, ensuring a consistent user experience.</p>
                           </div>
@@ -253,7 +266,7 @@
                         <div class="space30"></div>
                         <div class="div" data-aos="fade-left" data-aos-duration="1200">
                           <div class="service-main-boxes">
-                            <h4>Wireframing & Visual Design</h4>
+                            <h4>Deployment</h4>
                             <div class="space24"></div>
                             <p>Creating detailed wireframes and visually stunning designs to bring ideas into focus.</p>
                           </div>
@@ -277,79 +290,115 @@
                         <div class="space24"></div>
                         <h2 data-aos="fade-left" data-aos-duration="1000">The Tools Behind</h2>
                         <div class="space24"></div>
-                        <h2 class="head" data-aos="fade-left" data-aos-duration="1100">Exceptional <span>Design</span></h2>
+                        <h2 class="head" data-aos="fade-left" data-aos-duration="1100">Exceptional <span>Solutions</span></h2>
                       </div>
                       <div class="space80"></div>
                       <div class="row">
                         <div class="col-lg-4 col-md-6" data-aos="zoom-out" data-aos-duration="900">
                           <div class="skill-boxarea">
                             <div class="icons">
-                              <img src="/img/icons/skill1.svg" alt="" />
+                              <img src="https://cdn.jsdelivr.net/gh/selfhst/icons/webp/docker.webp" alt="Docker" />
                             </div>
                             <div class="space24"></div>
                             <h3><span class="counter">96</span>%</h3>
                             <div class="space16"></div>
-                            <p>Figma</p>
+                            <h3>Docker</h3>
                           </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6" data-aos="zoom-out" data-aos-duration="1000">
                           <div class="skill-boxarea">
                             <div class="icons">
-                              <img src="/img/icons/skill2.svg" alt="" />
+                              <img src="https://cdn.jsdelivr.net/gh/selfhst/icons/svg/github.svg" alt="GitHub" />
                             </div>
                             <div class="space24"></div>
                             <h3><span class="counter">87</span>%</h3>
                             <div class="space16"></div>
-                            <p>Photoshop</p>
+                            <h3>GitHub</h3>
                           </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6" data-aos="zoom-out" data-aos-duration="1100">
                           <div class="skill-boxarea">
                             <div class="icons">
-                              <img src="/img/icons/skill3.svg" alt="" />
+                              <img src="https://cdn.jsdelivr.net/gh/selfhst/icons/webp/kubernetes.webp" alt="Kubernetes" />
                             </div>
                             <div class="space24"></div>
                             <h3><span class="counter">90</span>%</h3>
                             <div class="space16"></div>
-                            <p>Illustrator</p>
+                            <h3>Kubernetes</h3>
                           </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6" data-aos="zoom-out" data-aos-duration="1200">
                           <div class="skill-boxarea">
                             <div class="icons">
-                              <img src="/img/icons/skill4.svg" alt="" />
+                              <img src="https://cdn.jsdelivr.net/gh/selfhst/icons/webp/jenkins.webp" alt="Jenkins" />
                             </div>
                             <div class="space24"></div>
                             <h3><span class="counter">89</span>%</h3>
                             <div class="space16"></div>
-                            <p>Sketch</p>
+                            <h3>Jenkins</h3>
                           </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6" data-aos="zoom-out" data-aos-duration="1000">
                           <div class="skill-boxarea">
                             <div class="icons">
-                              <img src="/img/icons/skill5.svg" alt="" />
+                              <img src="https://cdn.jsdelivr.net/gh/selfhst/icons/webp/drone-ci.webp" alt="Drone CI/CD" />
                             </div>
                             <div class="space24"></div>
                             <h3><span class="counter">92</span>%</h3>
                             <div class="space16"></div>
-                            <p>Adobe XD</p>
+                            <h3>Drone CI/CD</h3>
+                          </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6" data-aos="zoom-out" data-aos-duration="1000">
+                          <div class="skill-boxarea">
+                            <div class="icons">
+                              <img src="https://cdn.jsdelivr.net/gh/selfhst/icons/webp/ansible.webp" alt="Ansible" />
+                            </div>
+                            <div class="space24"></div>
+                            <h3><span class="counter">92</span>%</h3>
+                            <div class="space16"></div>
+                            <h3>Ansible</h3>
+                          </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6" data-aos="zoom-out" data-aos-duration="1000">
+                          <div class="skill-boxarea">
+                            <div class="icons">
+                              <img src="https://cdn.jsdelivr.net/gh/selfhst/icons/webp/cloudflare-light.webp" alt="Cloudflare" />
+                            </div>
+                            <div class="space24"></div>
+                            <h3><span class="counter">92</span>%</h3>
+                            <div class="space16"></div>
+                            <h3>Cloudflare</h3>
+                          </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6" data-aos="zoom-out" data-aos-duration="1000">
+                          <div class="skill-boxarea">
+                            <div class="icons">
+                              <img src="https://cdn.jsdelivr.net/gh/selfhst/icons/webp/linux.webp" alt="Linux" />
+                            </div>
+                            <div class="space24"></div>
+                            <h3><span class="counter">92</span>%</h3>
+                            <div class="space16"></div>
+                            <h3>Linux</h3>
                           </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6" data-aos="zoom-out" data-aos-duration="11000">
                           <div class="skill-boxarea">
                             <div class="icons">
-                              <img src="/img/icons/skill6.svg" alt="" class="Wordpress" />
+                              <img src="https://cdn.jsdelivr.net/gh/selfhst/icons/webp/wordpress.webp" alt="" class="Wordpress" />
                             </div>
                             <div class="space24"></div>
                             <h3><span class="counter">85</span>%</h3>
                             <div class="space16"></div>
-                            <p>Wordpress</p>
+                            <h3>Wordpress</h3>
                           </div>
                         </div>
                       </div>
@@ -367,7 +416,7 @@
                   <div class="row">
                     <div class="col-lg-12">
                       <div class="portfolio-header heading1">
-                        <h5 data-aos="fade-left" data-aos-duration="800"><img src="/img/icons/sublogo1.svg" alt="" />My Portfolio</h5>
+                        <h5 data-aos="fade-left" data-aos-duration="800"><img src="/img/icons/sublogo1.svg" alt="" />My Projects</h5>
                         <div class="space24"></div>
                         <h2 data-aos="fade-left" data-aos-duration="1000">Innovation Designs</h2>
                         <div class="space24"></div>
@@ -601,7 +650,7 @@
                   <div class="row">
                     <div class="col-lg-12">
                       <div class="blog-header heading1">
-                        <h5 data-aos="fade-left" data-aos-duration="900"><img src="/img/icons/sublogo1.svg" alt="" />Our Blog</h5>
+                        <h5 data-aos="fade-left" data-aos-duration="900"><img src="/img/icons/sublogo1.svg" alt="" />My Blog</h5>
                         <div class="space24"></div>
                         <h2 data-aos="fade-left" data-aos-duration="1000">Our Latest Blog Idea</h2>
                         <div class="space24"></div>
@@ -823,7 +872,7 @@
                         <div class="btn-area1">
                           <a href="index1"><img src="/img/logo/logo1.png" alt="" /></a>
                         </div>
-                        <p>© 2024 OVRO. All Rights Reserved.</p>
+                        <p>Edited with love by Rohit. All Rights Reserved.</p>
                       </div>
                     </div>
                   </div>
